Update 1 오브젝트와 의존관계.md

--- a/notes/1 오브젝트와 의존관계.md
+++ b/notes/1 오브젝트와 의존관계.md
@@ -76,6 +76,41 @@ Strategy Pattern
 #### 오브젝트 팩토리를 이용한 스프링 IoC
 * 빈: 스프링이 제어권을 가지고 직접 만들고 관계를 부여하는 오브젝트
       오브젝트 단위의 애플리케이션 컴포넌트
+      
+#### 애플리케이션 컨텍스트
+스프링에서는 빈 팩토리보다 애플리케이션 컨텍스트를 주로 사용 (애플리케이션 컨텍스트 == 빈 팩토리)
+빈의 생성, 관계설정 등의 제어 작업을 총괄
+스프링의 가장 대표적인 오브젝트
+애플리케이션에서 IoC를 적용해서 관리할 모든 오브젝트에 대한 생성과 관계설정 담당
+
+* 빈 Bean
+  스프링이 IoC 방식으로 직접 관리하는 오브젝트, 관리되는 오브젝트(managed object)
+  
+* 빈 팩토리 Bean Factory
+  스프링의 IoC를 담당하는 핵심 컨테이너
+  빈을 등록, 생성, 조회 등의 부가적인 빈 관리 기능 담당
+
+* 애플리케이션 컨텍스트 Application Context
+  빈 팩토리를 확장한 IoC 컨테이너
+  빈 등록 관리하는 기본적인 기능 + 스프링이 제공하는 각종 부가 서비스
+  
+* 설정정보/설정 메타정보 Configuration Metadata
+  애플리케이션 컨텍스트 또는 빈 팩토리가 IoC를 적용하기 위해 사용하는 메타정보
+
+* 컨테이너 또는 IoC 컨테이너
+  하나의 애플리케이션에서 여러 개가 만들어져 사용
+  
+* 스프링 프레임워크
+  IoC 컨테이너, 애플리케이션 컨텍스트를 포함해서 스프링이 제공하는 모든 기능을 통틀어 말할 때 사용
+  
+#### 오브젝트의 동일성과 동등성
+동일성 identity
+== 연산자
+두 개의 오브젝트가 동일하다면 사실은 하나의 오브젝트만 존재하는 것, 두 개의 오브젝트 레퍼런스를 가지고 있음
+
+동등성 equality
+equals() 메소드
+두 개의 오브젝트가 동일하지 않지만 동등한 경우에는 두 개의 서로 다른 오브젝트가 메모리상에 존재
 
 ```jsx
 dao = new jdbcDao();
